assets/css/style.css
/* Import Google Fonts */
@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400..800&family=Comfortaa:wght@300..700&display=swap");

/* Set up variables */
:root {
  --primary-color: #84dccf;
  --secondary-color: #ff4d00;
  --text-color: #3b4f54;
  --secondary-text-color: #a33100;
  --primary-font: "Comfortaa", sans-serif;
  --secondary-font: "Baloo Bhaijaan 2", cursive;
}

/* Global styles */
h1,
h2,
h4 {
  color: var(--text-color);
  font-family: var(--primary-font);
}

p,
ul,
label {
  color: var(--text-color);
  font-family: var(--secondary-font);
}

h3 {
  color: var(--secondary-text-color);
  font-family: var(--primary-font);
}

/* Body */
body {
  min-height: 100vh;
}

.border-rounded {
  border-radius: 30px;
  margin-bottom: 20px;
  color: var(--text-color);
  border-color: var(--secondary-color);
}

.border-rounded:hover {
  background-color: var(--secondary-color);
  color: var(--text-color);
}

/* Navbar */
.navbar {
  background-color: var(--primary-color);
}

.navbar-toggler {
  border: none;
}

.nav-item a {
  font-family: var(--primary-font);
  font-size: 1.2rem;
  vertical-align: middle;
  color: var(--text-color);
}

#logo {
  width: 50px;
  height: 50px;
}

.nav-item a:hover {
  color: var(--secondary-color);
}

/* Our trainers */
#trainer {
  object-fit: contain;
  max-height: 200px;
  max-width: 200px;
}

/* What we offer page */

.curriculum-icons {
  width: 100px;
  height: 100px;
  margin: 20px;
}

#list {
  list-style-position: inside;
  display: flex;
  flex-direction: column;
  width: 100%;
  
}
#list li {
  float: right;
  min-width: 200px;
}

.list-right {
  justify-content: end;
  align-items: end;
}

.disabled-button:disabled{
  border-radius: 10px;
  margin-bottom: 20px;
  border-color: var(--secondary-color);
}

/* Booking form */
.form-control,
.form-select {
  border-radius: 10px;
  margin-bottom: 20px;
  color: var(--text-color);
  border-color: var(--secondary-color);
}

.submit-button {
  border-color: var(--secondary-color);
  font-family: var(--secondary-font);
  color: var(--text-color);
  border-radius: 10px;
  margin-bottom: 20px;
  width: fit-content;
}
.submit-button:hover {
  background-color: var(--secondary-color);
  color: var(--text-color);
}

/* Events page */


.reg-events > h4 {
    font-size: 1.2rem;
}

/* Contact page */


/* Footer */
footer {
  margin-top: auto;
  bottom: 0;
  width: 100%;
  background-color: var(--primary-color);
  top: 100%;
  position: sticky;
}

.center {
  margin: auto;
  padding: 10px;
}

.flex-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  max-height: 100vh;
}

a > i {
  color: var(--text-color);
}

.map-image {
  width: 250px;
  height: 250px;
}

